# twat

./: .gitignore  CLEANUP.txt  LOG.md  README.md  REPO_CONTENT.txt  TODO-ALL.md  _version.py  cleanup.py  pyproject.toml  repomix-output.txt
.cursor/rules/: filetree.mdc
.github/workflows/: push.yml  release.yml
_previous/: porting-configuration-files-from-@twat-fs-to-@twat-coding.md
plugins/: pyproject.toml
plugins/.specstory/history/: 2025-03-06_12-18-enhancing-pyproject-toml-for-python-packages.md  2025-03-06_12-34-modernizing-pyproject-toml-for-python-packages.md  2025-03-06_14-40-troubleshooting-toml-formatting-error.md
src/: __init__.py
src/twat/: __init__.py  paths.py
tests/: test_package.py  test_twat.py
