[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twat"]
include = ["src/twat/**/*.py"]

[project]
name = "twat"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "importlib-metadata>=8.6.1",
    "importlib-resources>=6.5.2",
    "typing-extensions>=4.0.0; python_version < '3.10'",
    "pydantic>=2.10.6",
    "tomli>=2.2.1",
    "loguru>=0.7.3",
    "fire>=0.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",

]

[project.scripts]
twat = "twat:main"

[[project.authors]]
name = "Adam Twardoch"
email = "adam+github@twardoch.com"


[project.urls]
Documentation = "https://github.com/twardoch/twat#readme"
Issues = "https://github.com/twardoch/twat/issues"
Source = "https://github.com/twardoch/twat"


[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "src/twat/__version__.py"


[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "mypy>=1.15.0",
    "ruff>=0.9.7",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/twat --cov=tests {args:tests}"
type-check = "mypy src/twat tests"
lint = ["ruff check src/twat tests", "ruff format src/twat tests"]


[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]


[tool.hatch.envs.lint]
detached = true
dependencies = ["mypy>=1.0.0", "ruff>=0.1.0"]


[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/twat tests}"
style = ["ruff check {args:.}", "ruff format {args:.}"]
fmt = ["ruff format {args:.}", "ruff check --fix {args:.}"]
all = ["style", "typing"]


[tool.ruff]
target-version = 'py310'
line-length = 120

[tool.ruff.lint]
select = [
    'A',
    'ARG',
    'B',
    'C',
    'DTZ',
    'E',
    'EM',
    'F',
    'FBT',
    'I',
    'ICN',
    'ISC',
    'N',
    'PLC',
    'PLE',
    'PLR',
    'PLW',
    'Q',
    'RUF',
    'S',
    'T',
    'TID',
    'UP',
    'W',
    'YTT',
]
ignore = [
    'ARG001',
    'ARG002',
    'ARG004',
    'ARG005',
    'B904',
    'C901',
    'DTZ005',
    'E501',
    'F401',
    'F811',
    'FBT001',
    'FBT002',
    'FBT003',
    'I001',
    'ISC001',
    'N803',
    'PLR0911',
    'PLR0912',
    'PLR0913',
    'PLR0915',
    'PLR2004',
    'S311',
    'S603',
    'S607',
    'T201',
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ['S101']


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true


[tool.coverage.run]
source_pkgs = ["twat", "tests"]
branch = true
parallel = true
omit = ["src/twat/__about__.py"]


[tool.coverage.paths]
twat = ["src/twat", "*/twat/src/twat"]
tests = ["tests", "*/twat/tests"]


[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",                # For parallel test execution
    "pytest-benchmark[histogram]>=5.1.0", # For performance testing
]

dev = ["pre-commit>=4.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

audio = ["twat-audio[all]>=0.0.1"]
cache = ["twat-cache[all]>=2.6.7"]
coding = ["twat-coding[all]>=0.0.1"]
ez = ["twat-ez[all]>=2.6.2"]
fs = ["twat-fs[all]>=2.6.2"]
genai = ["twat-genai[all]>=2.6.2"]
hatch = ["twat-hatch[all]>=2.6.2"]
image = ["twat-image[all]>=2.6.2"]
labs = ["twat-labs[all]>=1.7.5"]
llm = ["twat-llm[all]>=2.6.2"]
mp = ["twat-mp[all]>=2.6.2"]
os = ["twat-os[all]>=2.6.2"]
search = ["twat-search[all]>=2.6.2"]
speech = ["twat-speech[all]>=2.6.2"]
task = ["twat-task[all]>=2.6.2"]
text = ["twat-text[all]>=2.6.2"]
video = ["twat-video[all]>=2.6.2"]

all = [
    "twat-audio[all]>=2.1.3",
    "twat-cache[all]>=2.6.7",
    #"twat-coding[all]>=0.0.1",
    "twat-ez[all]>=2.6.2",
    "twat-fs[all]>=2.6.2",
    "twat-genai[all]>=2.6.2",
    "twat-hatch[all]>=2.6.2",
    "twat-image[all]>=2.6.2",
    "twat-labs[all]>=2.6.2",
    "twat-llm[all]>=2.6.2",
    "twat-mp[all]>=2.6.2",
    "twat-search[all]>=2.6.2",
    "twat-speech[all]>=2.6.2",
    "twat-task[all]>=2.6.2",
    "twat-text[all]>=2.6.2",
    "twat-video[all]>=2.6.2",
    "importlib-metadata>=8.6.1",
    "importlib-resources>=6.5.2",
    "typing-extensions>=4.0.0; python_version < '3.10'",
    "pydantic>=2.10.6",
    "tomli>=2.2.1",
    "loguru>=0.7.3",
    "fire>=0.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[tool.hatch.envs.test]
dependencies = [".[test]"]

[tool.hatch.envs.test.scripts]
test = "python -m pytest -n auto {args:tests}"
test-cov = "python -m pytest -n auto --cov-report=term-missing --cov-config=pyproject.toml --cov=src/twat --cov=tests {args:tests}"
bench = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only"
bench-save = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only --benchmark-json=benchmark/results.json"

[tool.pytest.ini_options]
markers = ["benchmark: marks tests as benchmarks (select with '-m benchmark')"]
addopts = "-v -p no:briefcase"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
asyncio_mode = "auto"

[tool.pytest-benchmark]
min_rounds = 100
min_time = 0.1
histogram = true
storage = "file"
save-data = true
compare = [
    "min",    # Minimum time
    "max",    # Maximum time
    "mean",   # Mean time
    "stddev", # Standard deviation
    "median", # Median time
    "iqr",    # Inter-quartile range
    "ops",    # Operations per second
    "rounds", # Number of rounds
]
